<resources>
    <string name="app_name">HappyStory</string>
    <string name="story_title_one">HappyStory One</string>
    <string name="story_title_two">HappyStory Two</string>
    <string name="story_title_three">HappyStory Three </string>
    <string name="story_title_four">HappyStory Four</string>
    <string name="story_title_five">HappyStory Five</string>
    <string name="story_title_one_short_des">This short description of story one, the story is described in a short manner, because size   </string>
    <string name="story_title_two_short_des">This short description of story two, the story is described in a short manner, because size </string>
    <string name="story_title_three_short_des">This short description of story three, the story is described in a short manner, because size doesn\'t matter ;)</string>
    <string name="story_title_four_short_des">This short description of story four, the story is described in a short manner, because size doesn\'t matter ;)</string>
    <string name="story_title_five_short_des">This short description of story five, the story is described in a short manner, because size doesn\'t matter ;)</string>
    <string name="story_title_one_long_text">
HappyStory_one Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nec urna ac justo vehicula scelerisque suscipit id dolor. Nullam placerat lacinia sapien rutrum ultrices. Duis at lobortis eros, at eleifend neque. Aenean mattis justo a imperdiet sollicitudin. Sed laoreet nunc maximus turpis tincidunt vulputate. Duis magna neque, consequat eleifend gravida non, finibus eu enim. Pellentesque non velit venenatis tellus tristique ultrices quis ut elit. Fusce sollicitudin nisi porta pretium consectetur. Suspendisse lobortis, felis ut suscipit lobortis, nisi diam feugiat ante, vitae porttitor mauris eros eget metus. Ut at ligula nec orci suscipit maximus sed non odio. Vestibulum volutpat, tortor et dictum porta, sapien orci suscipit massa, id dapibus ipsum turpis sit amet quam. Nam non convallis nisl.
Etiam et endofP HappyStory_one Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nec urna ac justo vehicula scelerisque suscipit id dolor. Nullam placerat lacinia sapien rutrum ultrices. Duis at lobortis eros, at eleifend neque. Aenean mattis justo a imperdiet sollicitudin. Sed laoreet nunc maximus turpis tincidunt vulputate. Duis magna neque, consequat eleifend gravida non, finibus eu enim. Pellentesque non velit venenatis tellus tristique ultrices quis ut elit. Fusce sollicitudin nisi porta pretium consectetur. Suspendisse lobortis, felis ut suscipit lobortis, nisi diam feugiat ante, vitae porttitor mauris eros eget metus. Ut at ligula nec orci suscipit maximus sed non odio. Vestibulum volutpat, tortor et dictum porta, sapien orci suscipit massa, id dapibus ipsum turpis sit amet quam. Nam non convallis nisl.
Etiam et endofP HappyStory_one Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nec urna ac justo vehicula scelerisque suscipit id dolor. Nullam placerat lacinia sapien rutrum ultrices. Duis at lobortis eros, at eleifend neque. Aenean mattis justo a imperdiet sollicitudin. Sed laoreet nunc maximus turpis tincidunt vulputate. Duis magna neque, consequat eleifend gravida non, finibus eu enim. Pellentesque non velit venenatis tellus tristique ultrices quis ut elit. Fusce sollicitudin nisi porta pretium consectetur. Suspendisse lobortis, felis ut suscipit lobortis, nisi diam feugiat ante, vitae porttitor mauris eros eget metus. Ut at ligula nec orci suscipit maximus sed non odio. Vestibulum volutpat, tortor et dictum porta, sapien orci suscipit massa, id dapibus ipsum turpis sit amet quam. Nam non convallis nisl.
Etiam et endofP HappyStory_one Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nec urna ac justo vehicula scelerisque suscipit id dolor. Nullam placerat lacinia sapien rutrum ultrices. Duis at lobortis eros, at eleifend neque. Aenean mattis justo a imperdiet sollicitudin. Sed laoreet nunc maximus turpis tincidunt vulputate. Duis magna neque, consequat eleifend gravida non, finibus eu enim. Pellentesque non velit venenatis tellus tristique ultrices quis ut elit. Fusce sollicitudin nisi porta pretium consectetur. Suspendisse lobortis, felis ut suscipit lobortis, nisi diam feugiat ante, vitae porttitor mauris eros eget metus. Ut at ligula nec orci suscipit maximus sed non odio. Vestibulum volutpat, tortor et dictum porta, sapien orci suscipit massa, id dapibus ipsum turpis sit amet quam. Nam non convallis nisl.
Etiam et </string>
    <string name="story_title_two_long_text">
HappyStory_two Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nec urna ac justo vehicula scelerisque suscipit id dolor. Nullam placerat lacinia sapien rutrum ultrices. Duis at lobortis eros, at eleifend neque. Aenean mattis justo a imperdiet sollicitudin. Sed laoreet nunc maximus turpis tincidunt vulputate. Duis magna neque, consequat eleifend gravida non, finibus eu enim. Pellentesque non velit venenatis tellus tristique ultrices quis ut elit. Fusce sollicitudin nisi porta pretium consectetur. Suspendisse lobortis, felis ut suscipit lobortis, nisi diam feugiat ante, vitae porttitor mauris eros eget metus. Ut at ligula nec orci suscipit maximus sed non odio. Vestibulum volutpat, tortor et dictum porta, sapien orci suscipit massa, id dapibus ipsum turpis sit amet quam. Nam non convallis nisl.
Etiam et magna a diam porta molestie ornare quis ex. Suspendisse potenti. Mauris non lectus at sapien scelerisque dignissim et eget turpis. Nam leo quam, tempus non sapien sit amet, lobortis ultricies mauris. Vivamus non vulputate nunc. Nullam in efficitur diam. Pellentesque vel tristique risus, id facilisis ex. Etiam eu varius diam.
Pellentesque condimentum massa quis quam ornare, non sollicitudin massa tincidunt. Ut porttitor mattis rutrum. Nunc ullamcorper leo nunc, at commodo turpis consectetur sit amet. Sed neque elit, vehicula in facilisis sed, mollis quis nisi. Nullam magna ligula, semper nec neque in, interdum finibus turpis. Phasellus nec sapien quis quam luctus dapibus. Mauris convallis placerat nisi ac semper. Proin congue ante et nisi ultrices eleifend. Nulla auctor, magna non ullamcorper tristique, nibh magna varius lacus, a convallis nisi felis ut mi. Nulla pulvinar mi turpis, vitae vestibulum magna bibendum vitae. Praesent in condimentum lacus, et finibus urna. Aliquam non posuere nunc. Pellentesque accumsan, eros nec commodo consequat, libero nisi rhoncus purus, sed fringilla nibh massa in quam. Nullam rhoncus justo a elit rhoncus dictum. Vivamus lacus neque, dictum nec dolor sit amet, commodo faucibus justo. Aliquam quis eleifend nunc.
Suspendisse urna dolor, pellentesque sit amet massa eleifend, consequat tincidunt neque. Vestibulum semper sit amet mauris vel pellentesque. Cras consectetur rhoncus ante sit amet sagittis. Quisque luctus malesuada leo ac eleifend. Etiam quam diam, maximus vel mi eu, tristique pellentesque metus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam aliquam aliquet lacinia. Pellentesque suscipit ullamcorper urna eu tempus.
Phasellus a scelerisque augue, nec gravida massa. Integer orci elit, rhoncus in tempus sed, faucibus fringilla turpis. Phasellus convallis risus turpis, at malesuada libero rhoncus nec. Donec est velit, scelerisque quis ullamcorper ac, ullamcorper at diam. Suspendisse cursus ipsum non magna rutrum, non lacinia libero imperdiet. Etiam lacinia elit ac nulla pellentesque consectetur. Praesent a tempor lacus. Nam vel tristique ex, tincidunt tempor turpis. Nullam at massa leo. Morbi fermentum, lorem id dignissim tempus, dolor arcu finibus diam, non consequat turpis enim vel leo. Nulla lacinia mi ac felis gravida blandit. Cras fringilla mauris in enim pharetra euismod. Quisque feugiat tellus in molestie cursus. Suspendisse convallis neque quis augue sodales dictum. Morbi augue eros, ornare vel tortor quis, congue aliquam ante. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
    </string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="category_one">Category One</string>
    <string name="category_two">Category two</string>
    <string name="category_three">Category three</string>
    <string name="action">Action</string>
    <string name="share_application">Share Application</string>
    <string name="this_is_the_nav_bar">This is the nav bar</string>
    <string name="this_is_subtitle_of_nav">This is subtitle of nav</string>
    <string name="content_dis_nav_bar">This is the navigational bar image</string>
</resources>